--- a/emacs.org
+++ b/emacs.org
@@ -1,7 +1,10 @@
 #+title: Emacs stuff
 
-*  Refresh remote directory
+* Refresh ido directory
+  =C-l=
 
+*  Refresh remote directory
   press =g= in dired buffer
 
   Source: https://stackoverflow.com/questions/13491174/refresh-remote-directory-in-emacs-tramp-mode
+
